# Citizen-Service-Navigator-AI

./: .gitignore  CONTRIBUTE.md  helpers.py  main.py  pyproject.toml
agent/: application_process.py  document_requirement_agent.py  drafting_agent.py  eligibility_agent.py  eligibility_evaluator_agent.py  explainer_agent.py  explanation_agent.py  form_filler_agent.py  google_translate.py  guidance_agent.py  offline_agent.py  orchestrator.py  orchestrator_agent.py  policy_retriever_agent.py  preefill_agent.py  query_agent.py
agents/: eligibility_agent.py  explainer_agent.py  form_filler_agent.py  policy_retriever_agent.py
database/: mongo_connection.py  mongodb.py
migrate-data-into-mongodb/: citizen_messages_mock_updated.json  citizen_services_mock_data_full.json  mongodb_insert.py  pakistan_citizen_mock_data_expanded.json
models/: citizen.py  message_model.py  service_model.py  user.py
routers/: eligibility_router.py
