[project]
name = "citizen-service-navigator-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.117.1",
    "google-api-python-client>=2.183.0",
    "google-auth>=2.40.3",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "motor>=3.7.1",
    "openai-agents>=0.3.2",
    "passlib[bcrypt]>=1.7.4",
    "pdfkit>=1.0.0",
    "pydantic>=2.11.9",
    "pypdf2>=3.0.1",
    "python-jose>=3.5.0",
    "uvicorn>=0.37.0",
]
